# fastApi

./: .dockerignore  .env.example  .gitignore  .pylintrc  .python-version  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: install_and_test_application.yml
src/: main.py
src/api/: api_utilities.py  api_v1.py  api_v1_ws_router.py
src/api/health_check_routes/: check_routes.py
src/api/v1_routes/: user_routes.py  web_socket_routes.py
src/core/: auth.py  config.py  config_env.py  cors_config.py  custom_exceptions.py  env_config.py  exception_handlers.py  exceptions.py  logger_config.py
src/db/config/: base.py
src/db/connectors/: mongo_db.py  postgres_db.py  sqlite_db.py
src/db/migrations/: env.py
src/db/migrations/versions/: 2024_10_10_1041-2a1baaf88316_initial_migrations.py  2024_10_10_1048-8eeb549a6f8a_next_migration.py  2024_10_11_1645-0704376cdd84_initial_migration.py  2024_10_16_1607-2c55f33071aa_initial_migration.py  2024_10_20_1259-f559f3e35328_initial_migration.py
src/db/models/v1_models/: applications_model.py  users_model.py
src/db/schemas/: schema_config.py
src/db/schemas/v1_schemas/: application_schemas.py  user_schemas.py
src/middlewares/: logger.py
src/utils/: nano_id.py  web_socket_connection_manager.py
tests/: test_health_check_route.py  test_user_route.py
